# Grenouille

./: .gitignore  Procfile  README.md  README.rst  db_create.py  grenouillecli.py  pyproject.toml  requirements.txt  runserver.py  setup.py  watcher.py
conf/: conf.cfg-sample
frog/: __init__.py  database.py  station.py  watcher.py
grenouille/: __init__.py  database.py  db_create.py  models.py  views.py  watcher.py
web/: __init__.py  config.py  forms.py  models.py  rest.py  views.py
web/static/css/: style1.css
web/templates/: about.html  edit_station.html  layout.html  login.html  map.html  profile.html  signup.html  station.html  station_measures.html
web/templates/admin/: create_user.html  dashboard.html  user.html
web/templates/errors/: 404.html  500.html
yoctometeo/: __init__.py  openweathermap.py  station.py
