[tool.poetry]
name = "grenouille"
version = "0.1.0"
description = "Weather station service"
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
distribute = "^0.7.3"
Flask-Gravatar = "^0.5.0"
Flask-HTTPAuth = "^4.2.0"
Flask-Login = "^0.5.0"
Flask-Principal = "^0.4.0"
Flask-SQLAlchemy = "^2.4.4"
Flask-WTF = "^0.14.3"
psycopg2 = "^2.8.6"
pycountry = "^20.7.3"
requests = "^2.25.1"
wsgiref = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
