[tool.poetry]
name = "grenouille"
version = "0.1.0"
description = "Weather station service"
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
distribute = "^0.7.3"
Flask = "^2.0.2"
Flask-Gravatar = "^0.5.0"
Flask-HTTPAuth = "^4.5.0"
Flask-Login = "^0.5.0"
Flask-Principal = "^0.4.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-WTF = "^1.0.0"

psycopg2-binary = "^2.9.2"
pycountry = "^20.7.3"
requests = "^2.31.0"
WTForms = {extras = ["email"], version = "^3.0.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
